Made interfaces for alpaca, also started refactoing it so it works like binance.